# repx-rs

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: main.yml
crates/repx-client/: Cargo.toml
crates/repx-client/src/: client.rs  error.rs  inputs.rs  lib.rs  orchestration.rs  resources.rs
crates/repx-client/src/client/: local.rs  slurm.rs  status.rs
crates/repx-client/src/targets/: local.rs  mod.rs  ssh.rs
crates/repx-client/tests/: wave_scheduler.rs
crates/repx-core/: Cargo.toml
crates/repx-core/src/: config.rs  engine.rs  error.rs  lab.rs  lib.rs  logging.rs  model.rs  resolver.rs  theme.rs
crates/repx-core/src/store/: artifacts.rs  mod.rs  outcomes.rs  timing.rs
crates/repx-executor/: Cargo.toml
crates/repx-executor/src/: lib.rs
crates/repx-runner/: Cargo.toml
crates/repx-runner/src/: cli.rs  lib.rs  main.rs
crates/repx-runner/src/commands/: execute.rs  gc.rs  internal.rs  list.rs  mod.rs  run.rs  scatter_gather.rs
crates/repx-runner/tests/: bwrap_tests.rs  component_tests.rs  docker_tests.rs  e2e_tests.rs  gc_tests.rs  harness.rs  podman_tests.rs  regression_tests.rs
crates/repx-tui/: Cargo.toml
crates/repx-tui/src/: app.rs  event.rs  main.rs  model.rs  ui.rs
crates/repx-tui/src/app/: jobs.rs  targets.rs
crates/repx-tui/src/widgets/: braille_graph.rs  braille_sparkline.rs  color.rs  mod.rs  stacked_bar_chart.rs
nix/: checks.nix  formatters.nix
nix/checks/: e2e-impure-docker.nix  e2e-impure-podman.nix  e2e-impure.nix  e2e-local.nix  e2e-mount-paths-docker.nix  e2e-mount-paths-podman.nix  e2e-mount-paths.nix  e2e-remote-local.nix  e2e-remote-slurm.nix  formatting.nix  simulate-non-nixos.nix  static-analysis.nix
nix/formatters/: clippy.nix  treefmt.nix
tests/: e2e-local.nix  e2e-remote-local.nix  e2e-remote-slurm.nix
