[workspace]
resolver = "2"
members = [
  "crates/repx-runner",
  "crates/repx-core",
  "crates/repx-executor",
  "crates/repx-client",
  "crates/repx-tui",
]

[workspace.dependencies]
repx-core = { path = "crates/repx-core" }
repx-client = { path = "crates/repx-client" }
repx-executor = { path = "crates/repx-executor" }
repx-runner = { path = "crates/repx-runner" }
repx-tui = { path = "crates/repx-tui" }

fs-err = "3.1"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0"
comfy-table = "7.2"
crossterm = "0.29.0"
futures = "0.3.31"
indicatif = "0.18"
log = "0.4.28"
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23.0"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5"
xdg = "3.0.0"
sha2 = "0.10.9"
toml = "0.9.8"
ctrlc = "3.5.1"
rand = "0.9.2"
whoami = "1.6.1"
nix = { version = "0.30.1", features = ["signal", "fs"] }
shellexpand = "3.1.1"


[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
