[package]
name = "repx-client"
version = "0.1.0"
edition = "2021"

[dependencies]
repx-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
fs-err = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
xdg = { workspace = true }
whoami = { workspace = true }
wildmatch = "2.6"
tempfile = { workspace = true }
sha2 = { workspace = true }
fs_extra = "1.3"
toml = { workspace = true }
num_cpus.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
thiserror = "2.0"
